2008-09-04  Alejandro Pinheiro  <apinheiro@igalia.com>

	* src/hildon-time-selector.c
	(_create_hours_model): change the range on 12h ampm format in order to use
	a 12-11 range instead of previous 01-12 range
	(hildon_time_selector_set_time): change the way to select the current time
	on 12h ampm format, due the change on the range
	(hildon_time_selector_get_time): fix the hour returned on 12 ampm format
	Fixes: NB#88036

2008-09-03  Alejandro Pinheiro  <apinheiro@igalia.com>

	* src/hildon-touch-selector.c
	(hildon_date_touch_selector_get_selected): fix the selection mode check,
	in order to allow use this function on multiple row selection mode if
	the column is different that the first one
	Fixes: NB#88047

2008-09-03  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-time-selector.c: (_custom_print_func): Change the logical ids
	to "wdgt_va_12h_time" and "wdgt_va_24h_time". Fixes NB#88045.

2008-09-02  Alejandro Pinheiro  <apinheiro@igalia.com>

	* src/hildon-date-selector.h: clean some comments, now on the .c
	* src/hildon-date-selector.c
	(hildon_date_selector_select_month): first implementation
	(hildon_date_selector_select_day): added documentation, reimplemented
	using hildon_date_selector_select_current_date to avoid repeat code
	Fixes: NB#88027

2008-09-02  Alejandro G. Castro	 <alex@igalia.com>

	Reviewed interaction logic based on device experiences, refactored
	code.

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_class_init): Updated default vmax speed.
	(hildon_pannable_area_calculate_velocity): Added this function, it
	avoids duplicate valocity calculation. Adjusted calculation to
	avoid problems with zero dist events.

	(hildon_pannable_area_motion_notify_cb): Now we use the
	calculate_velocity function.

2008-09-02  Alejandro Pinheiro  <apinheiro@igalia.com>

	* src/hildon-date-selector.c
	(hildon_date_selector_select_current_date): fix the day range check
	as it failed using the last day of the current month
	Fixes NB#88023
